# astrajoystick

./: README.md  pyproject.toml
examples/: ds2-general.toml  ds2-slideshow.toml
src/astrajoystick/: __main__.py  config.py  mainlooper.py  motion_thread.py
src/astrajoystick/binding/: binding.py  common.py  mapper.py  sender.py
